List RTK as external for "/react" entry point and fix artifacts

--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -34,7 +34,7 @@
     },
     "./react": {
       "types": "./dist/react/index.d.ts",
-      "import": "./dist/react/redux-toolkit-react.modern.js",
+      "import": "./dist/react/redux-toolkit-react.modern.mjs",
       "default": "./dist/react/cjs/index.js"
     },
     "./query": {
