--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -110,10 +110,10 @@
     "react"
   ],
   "dependencies": {
-    "immer": "^10.0.1",
+    "immer": "^10.0.2",
     "redux": "5.0.0-alpha.6",
     "redux-thunk": "3.0.0-alpha.3",
-    "reselect": "^4.1.8"
+    "reselect": "^5.0.0-alpha.2"
   },
   "peerDependencies": {
     "react": "^16.9.0 || ^17.0.0 || ^18",
