--- a/packages/rtk-codemods/package.json
+++ b/packages/rtk-codemods/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29",
     "@types/jscodeshift": "^0.11.6",
     "codemod-cli": "^3.2.0",
+    "jscodeshift": "^0.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^5"
   },
