--- a/examples/query/react/basic/package.json
+++ b/examples/query/react/basic/package.json
@@ -6,9 +6,9 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.0-rc.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@reduxjs/toolkit": "workspace:*",
+    "react": "18.3.0-canary-613e6f5fc-20230616",
+    "react-dom": "18.3.0-canary-613e6f5fc-20230616",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1"
   },
