--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "msw": "patch:msw@npm:0.40.2#.yarn/patches/msw-npm-0.40.2-2107d48752",
     "jscodeshift": "0.13.1",
     "react-redux": "npm:8.0.2",
-    "react": "npm:18.2.0",
-    "react-dom": "npm:18.2.0",
+    "react": "18.3.0-canary-613e6f5fc-20230616",
+    "react-dom": "18.3.0-canary-613e6f5fc-20230616",
     "resolve": "1.22.1",
     "ts-node": "10.4.0",
     "@types/react": "npm:18.0.12",
