build: use typescript-eslint@v6 internally

--- a/examples/query/react/graphql-codegen/package.json
+++ b/examples/query/react/graphql-codegen/package.json
@@ -43,7 +43,7 @@
     "typescript": "4.1.3"
   },
   "resolutions": {
-    "@typescript-eslint/parser": "4.4.1"
+    "@typescript-eslint/parser": "6.0.0-alpha.158"
   },
   "scripts": {
     "develop": "cross-env CHOKIDAR_USEPOLLING=true yarn start",
