--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -40,8 +40,8 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/yargs": "^16.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "6.0.0-alpha.158",
+    "@typescript-eslint/parser": "6.0.0-alpha.158",
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
     "convert-source-map": "^1.7.0",
@@ -73,7 +73,7 @@
     "terser": "^5.6.1",
     "ts-jest": "^27",
     "tslib": "^1.10.0",
-    "typescript": "~4.2.4",
+    "typescript": "~4.3.4",
     "yargs": "^15.3.1"
   },
   "scripts": {
