--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -188,12 +188,6 @@ jobs:
 
       - name: Run test step
         run: yarn test
-        if: matrix.example != 'are-the-types-wrong'
-
-      - name: Run test step (attw)
-        # Ignore "FalseCJS" errors in the `attw` job
-        run: yarn test -n FalseCJS
-        if: matrix.example == 'are-the-types-wrong'
 
   are-the-types-wrong:
     name: Check package config with are-the-types-wrong
@@ -217,4 +211,4 @@ jobs:
         run: ls -l .
 
       - name: Run are-the-types-wrong
-        run: npx @arethetypeswrong/cli ./package.tgz --format table
+        run: npx @arethetypeswrong/cli ./package.tgz --format table --ignore-rules false-cjs
