--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -111,13 +111,13 @@
   ],
   "dependencies": {
     "immer": "^10.0.2",
-    "redux": "5.0.0-beta.0",
-    "redux-thunk": "3.0.0-alpha.3",
+    "redux": "^5.0.0-beta.0",
+    "redux-thunk": "^3.0.0-beta.0",
     "reselect": "^5.0.0-alpha.2"
   },
   "peerDependencies": {
     "react": "^16.9.0 || ^17.0.0 || ^18",
-    "react-redux": "^7.2.1 || ^8.0.2"
+    "react-redux": "^7.2.1 || ^8.0.2 || ^9.0.0-alpha.1"
   },
   "peerDependenciesMeta": {
     "react": {
