--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -149,7 +149,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['16.x']
-        example: ['cra4', 'cra5', 'next', 'vite', 'node-standard', 'node-esm']
+        example: ['cra4', 'cra5', 'next', 'vite', 'node-standard', 'node-esm', 'node16-esm-ts']
     defaults:
       run:
         working-directory: ./examples/publish-ci/${{ matrix.example }}
@@ -163,11 +163,11 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
 
-      - name: Install deps
-        run: yarn install
-
       - name: Remove existing RTK
         run: yarn remove @reduxjs/toolkit
+
+      - name: Install deps
+        run: yarn install
 
       - uses: actions/download-artifact@v2
         with:
