--- a/examples/publish-ci/cra4/package.json
+++ b/examples/publish-ci/cra4/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "file:../../../packages/toolkit/package.tgz",
     "msw": "^0.49.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
