Fix OpenSSL errors with CRA 4

--- a/examples/publish-ci/cra4/package.json
+++ b/examples/publish-ci/cra4/package.json
@@ -12,8 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "eject": "react-scripts eject",
     "serve-app": "yarn serve -s build",
     "test": "yarn playwright test",
