--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -66,6 +66,7 @@
     "axios": "^0.19.2",
     "console-testing-library": "0.6.1",
     "convert-source-map": "^1.7.0",
+    "esbuild-extra": "^0.3.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
