--- a/examples/publish-ci/vite/package.json
+++ b/examples/publish-ci/vite/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.0-beta.2",
-    "msw": "^0.49.2",
+    "msw": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.0-alpha.1"
+    "react-redux": "^9.0.0-beta.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.31.1",
