--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.13.2",
+    "@phryneas/ts-version": "^1.0.2",
     "@size-limit/preset-small-lib": "^4.11.0",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.1.5",
