--- a/packages/rtk-codemods/package.json
+++ b/packages/rtk-codemods/package.json
@@ -31,7 +31,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "vitest": "^0.30.1"
   },
   "engines": {
     "node": ">= 16"
