chore: Fixed oazapfts typescript version in rtk-query-codegen-openapi

--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -63,6 +63,9 @@
     "swagger2openapi": "^7.0.4",
     "typescript": ">=4.1 <=4.5"
   },
+  "resolutions": {
+    "typescript": ">=4.1 <=4.5"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
