--- a/examples/action-listener/counter/package.json
+++ b/examples/action-listener/counter/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.0",
+    "@reduxjs/toolkit": ">=2.0.0-beta.3 || >=2.0.0-rc.0 || ^2.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
