--- a/examples/publish-ci/next/package.json
+++ b/examples/publish-ci/next/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"./src/**/*.{ts,tsx}\" \"**/*.md\""
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.0-beta.2",
+    "@reduxjs/toolkit": ">=2.0.0-beta.3 || >=2.0.0-rc.0 || ^2.0.0",
     "msw": "^1.3.2",
     "next": "^13.2",
     "react": "^18.2.0",
