--- a/examples/publish-ci/node-standard/package.json
+++ b/examples/publish-ci/node-standard/package.json
@@ -7,7 +7,7 @@
     "test": "node test-cjs.js && node test-esm.mjs"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.0-beta.2",
+    "@reduxjs/toolkit": ">=2.0.0-beta.3 || >=2.0.0-rc.0 || ^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.0-beta.0"
