--- a/examples/query/react/authentication-with-extrareducers/package.json
+++ b/examples/query/react/authentication-with-extrareducers/package.json
@@ -9,7 +9,7 @@
     "@chakra-ui/react": "1.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@reduxjs/toolkit": "^1.6.0-rc.1",
+    "@reduxjs/toolkit": ">=2.0.0-beta.3 || >=2.0.0-rc.0 || ^2.0.0",
     "framer-motion": "^2.9.5",
     "msw": "^0.40.2",
     "react": "^18.1.0",
