--- a/examples/query/react/kitchen-sink/package.json
+++ b/examples/query/react/kitchen-sink/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@reduxjs/toolkit": "1.8.1",
+    "@reduxjs/toolkit": ">=2.0.0-beta.3 || >=2.0.0-rc.0 || ^2.0.0",
     "msw": "^0.40.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
