--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -119,7 +119,7 @@
   },
   "peerDependencies": {
     "react": "^16.9.0 || ^17.0.0 || ^18",
-    "react-redux": "^7.2.1 || ^8.0.2 || ^9.0.0-alpha.1"
+    "react-redux": "^7.2.1 || ^8.0.2 || ^9.0.0-beta.0"
   },
   "peerDependenciesMeta": {
     "react": {
