--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -112,14 +112,14 @@
     "react"
   ],
   "dependencies": {
-    "immer": "^10.0.2",
-    "redux": "^5.0.0-beta.0",
-    "redux-thunk": "^3.0.0-beta.0",
-    "reselect": "^5.0.0-beta.0"
+    "immer": "^10.0.3",
+    "redux": "^5.0.0-rc.0",
+    "redux-thunk": "^3.0.0-rc.0",
+    "reselect": "^5.0.0-beta.1"
   },
   "peerDependencies": {
     "react": "^16.9.0 || ^17.0.0 || ^18",
-    "react-redux": "^7.2.1 || ^8.0.2 || ^9.0.0-beta.0"
+    "react-redux": "^7.2.1 || ^8.1.3 || ^9.0.0-rc.0"
   },
   "peerDependenciesMeta": {
     "react": {
