--- a/examples/publish-ci/cra4/package.json
+++ b/examples/publish-ci/cra4/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.0-beta.2",
+    "@reduxjs/toolkit": "^2.0.0-beta.4",
     "msw": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.0-beta.0",
+    "react-redux": "^9.0.0-rc.0",
     "react-scripts": "^4",
     "web-vitals": "^2.1.4"
   },
