--- a/examples/publish-ci/next/package.json
+++ b/examples/publish-ci/next/package.json
@@ -10,12 +10,12 @@
     "format": "prettier --write \"./src/**/*.{ts,tsx}\" \"**/*.md\""
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.0-beta.2",
+    "@reduxjs/toolkit": "^2.0.0-beta.4",
     "msw": "^1.3.2",
     "next": "^13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.0-beta.0"
+    "react-redux": "^9.0.0-rc.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.31.1",
