Custom slice creator implementation

--- a/packages/toolkit/tsconfig.json
+++ b/packages/toolkit/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": [
     "src"
@@ -9,5 +9,5 @@
   "exclude": [
     "src/**/*.test.ts*",
     "src/**/tests/*"
-  ]
+  ],
 }
