--- a/packages/toolkit/tsconfig.base.json
+++ b/packages/toolkit/tsconfig.base.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ESnext",
     "module": "esnext",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "importHelpers": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
@@ -32,18 +35,37 @@
     "allowSyntheticDefaultImports": true,
     "emitDeclarationOnly": true,
     "baseUrl": ".",
-    "types": ["vitest/globals"],
+    "types": [
+      "vitest/globals"
+    ],
     "paths": {
-      "@reduxjs/toolkit": ["src/index.ts"], // @remap-prod-remove-line
-      "@reduxjs/toolkit/react": ["src/react/index.ts"], // @remap-prod-remove-line
-      "@reduxjs/toolkit/query": ["src/query/index.ts"], // @remap-prod-remove-line
-      "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"], // @remap-prod-remove-line
+      "@reduxjs/toolkit": [
+        "src/index.ts"
+      ], // @remap-prod-remove-line
+      "@reduxjs/toolkit/react": [
+        "src/react/index.ts"
+      ], // @remap-prod-remove-line
+      "@reduxjs/toolkit/query": [
+        "src/query/index.ts"
+      ], // @remap-prod-remove-line
+      "@reduxjs/toolkit/query/react": [
+        "src/query/react/index.ts"
+      ], // @remap-prod-remove-line
       // for type imports in tests only
-      "@reduxjs/toolkit/dist/*": ["src/*"], // @remap-prod-remove-line
+      "@reduxjs/toolkit/dist/*": [
+        "src/*"
+      ], // @remap-prod-remove-line
       // for type imports in tests only
-      "@reduxjs/toolkit/dist/query/*": ["src/query/*"], // @remap-prod-remove-line
+      "@reduxjs/toolkit/dist/query/*": [
+        "src/query/*"
+      ], // @remap-prod-remove-line
       // internal imports in tests only
-      "@internal/*": ["src/*"]
+      "@internal/*": [
+        "src/*"
+      ],
+      "react": [
+        "../../node_modules/react"
+      ]
     }
   }
 }
