--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -55,7 +55,6 @@
     "@size-limit/preset-small-lib": "^4.11.0",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.1.5",
-    "@types/convert-source-map": "^1.5.1",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^10.14.4",
@@ -63,11 +62,10 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/yargs": "^16.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
     "axios": "^0.19.2",
     "console-testing-library": "0.6.1",
-    "convert-source-map": "^1.7.0",
     "esbuild-extra": "^0.3.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
@@ -91,7 +89,7 @@
     "tslib": "^1.10.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.2",
-    "typescript": "~4.9",
+    "typescript": "5.2",
     "vitest": "^0.30.1",
     "yargs": "^15.3.1"
   },
