--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "netlify-plugin-cache": "^1.0.3",
     "prettier": "^2.2.1",
     "release-it": "^14.12.5",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "typescript": "5.2"
   },
   "resolutions": {
     "@babel/core": "7.19.3",
@@ -67,7 +68,8 @@
     "type-fest": "2.19.0",
     "console-testing-library@0.6.1": "patch:console-testing-library@npm%3A0.6.1#./.yarn/patches/console-testing-library-npm-0.6.1-4d9957d402.patch",
     "@typescript-eslint/eslint-plugin": "6.12.0",
-    "@typescript-eslint/parser": "6.12.0"
+    "@typescript-eslint/parser": "6.12.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "build": "yarn build:packages",
