--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -211,4 +211,4 @@ jobs:
         run: ls -l .
 
       - name: Run are-the-types-wrong
-        run: npx @arethetypeswrong/cli ./package.tgz --format table --ignore-rules false-cjs
+        run: npx @arethetypeswrong/cli@0.11.0 ./package.tgz --format table --ignore-rules false-cjs
