--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -49,6 +49,7 @@
     }
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.13.1",
     "@microsoft/api-extractor": "^7.13.2",
     "@phryneas/ts-version": "^1.0.2",
     "@size-limit/preset-small-lib": "^4.11.0",
